# vix-ai-distributed

./: CMakeLists.txt  README.md
include/vix/ai/distributed/: FederatedTrainer.hpp  Peer.hpp  SecureChannel.hpp  SyncManager.hpp
src/: FederatedTrainer.cpp  Peer.cpp  SecureChannel.cpp  SyncManager.cpp
tests/: CMakeLists.txt  distributed_smoke_test.cpp  fl_tests.cpp  peer_tests.cpp  secure_tests.cpp  sync_tests.cpp
